RT-19780: Polish Solution 1A & Add EPIC Styles

--- a/web-content/root/education/EPIC/WeTeach_CS/cs-regional-data--interactive.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/cs-regional-data--interactive.html
@@ -1,20 +1,9 @@
-<style id="style--weteachcs-card--image-link" type="text/css">
-/* TODO: Migrate these to `style--weteachcs-card` component instances */
-/* WARNING: Duplicated in other pages */
-.weteachcs-card img {
-	border: 1px solid #ddd;
-}
-.weteachcs-card a:hover img {
-	outline-offset: 1px;
-	outline: 1px solid #5d5d5d;
-}
-</style>
-<!-- CAVEAT: This relies on CSS from other Web Content Display's <style> tag -->
+<!--<style type="text/css">/* Markup below relies on 2021 "EDUCATION - EPIC - WeTeach_CS - Styles" */</style>-->
 <div class="weteachcs-card">
 	<div class="row">
-		<div class="col-sm-7  weteachcs-card__content">
-			<h5>
-				Texas K-12 Computer Science Education Data</h5>
+		<div class="col-sm-8  weteachcs-card__content">
+			<h4>
+				2019–20 Texas K-12 Computer Science Education Data</h4>
 			<p>
 				You may <a href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">interact with our CS education data</a> to review percentages of capacity, access, and participation by several factors:</p>
 			<ul>
@@ -30,7 +19,7 @@
 					and more</li>
 			</ul>
 		</div>
-		<a class="col-sm-5  weteachcs-card__figure" href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">
+		<a class="col-sm-4  weteachcs-card__figure" href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1898187/cs-regional-data-interactive-thumb--2018-2019.png" />
 		</a>
 	</div>
