--- a/web-content/root/education/epic.html
+++ b/web-content/root/education/epic.html
@@ -45,6 +45,7 @@ Style guide: components.weteachcs
     font-size: 100%;
 }
 
+/* WARNING: Scopes objects */
 .weteachcs-content .o-gallery > .weteachcs-card {
     margin: 0;
 }</style>
