--- a/web-content/root/education/EPIC/WeTeach_CS/cs-regional-data--interactive.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/cs-regional-data--interactive.html
@@ -5,7 +5,7 @@
 			<h4>
 				2019–20 Texas K-12 Computer Science Education Data</h4>
 			<p>
-				You may <a href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">interact with our CS education data</a> to review percentages of capacity, access, and participation by several factors:</p>
+				You may <a href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">interact with our CS education data</a><strong>*</strong> to review percentages of capacity, access, and participation by several factors:</p>
 			<ul>
 				<li>
 					CS Certification</li>
@@ -18,6 +18,7 @@
 				<li>
 					and more</li>
 			</ul>
+			<p><small>* The browsers Firefox and Chrome may provide a better user experience.</small></p>
 		</div>
 		<a class="col-sm-4  weteachcs-card__figure" href="https://public.tableau.com/views/TexasComputerScienceEducationData/CSProfile?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank">
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1898187/cs-regional-data-interactive-thumb--2018-2019.png" />
