Quick: Update Homepage Training from CMS Content

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,16 +8,6 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/frontera-welcome.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" target="_blank">High Performance Computing on Frontera</a><br />
-			May 27th, June 3rd<span>&nbsp; |&nbsp;
-			10am - 3:30pm CDT</span></p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://www.isc-hpc.com/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1141713/homepageNews0.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
@@ -30,7 +20,7 @@
 		<a href="https://pearc.acm.org/pearc21/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/pearc21.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice & Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
+			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice &amp; Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
 			July 19th – 22nd</p>
 	</div>
 </div>
@@ -40,8 +30,7 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" target="_blank">2021 DesignSafe Academy</a><br />
-			July 26th - 30th<span>&nbsp; |&nbsp;
-			10am - 5pm CDT</span></p>
+			July 26th - 30th<span>&nbsp; |&nbsp; 10am - 5pm CDT</span></p>
 	</div>
 </div>
 <div class="row">
