--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,19 +8,10 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.isc-hpc.com/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1141713/homepageNews0.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.isc-hpc.com/" target="_blank">ISC High Performance 2021 Digital</a><br />
-			June 24th – July 2nd</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://pearc.acm.org/pearc21/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/pearc21.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice &amp; Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
+			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice & Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
 			July 19th – 22nd</p>
 	</div>
 </div>
@@ -30,7 +21,35 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" target="_blank">2021 DesignSafe Academy</a><br />
-			July 26th - 30th<span>&nbsp; |&nbsp; 10am - 5pm CDT</span></p>
+			July 26th - 30th<span>&nbsp; |&nbsp;
+			10am - 5pm CDT</span></p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="/education/institutes/applied-parallel-programming" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="/education/institutes/applied-parallel-programming">TACC Summer Institute: Computational Research Techniques: Parallel Programing</a><br />
+			July 29th, August 12th, August 19th</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="/education/institutes/machine-learning" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/machine-learning-with-intel.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="/education/institutes/machine-learning">TACC Summer Institute: Machine Learning</a><br />
+			August 2nd – 6th</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="/education/institutes/marine-sciences-ml-workshop" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1970021/marine-sciences-ml-workshop.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="/education/institutes/marine-sciences-ml-workshop">TACC Summer Institute: Marine Sciences Machine Learning Workshop</a><br />
+			August 9th – 20th</p>
 	</div>
 </div>
 <div class="row">
