RT-19917: Update Homepage Training & Events, tweak

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -30,7 +30,7 @@
 		<a href="/education/institutes/applied-parallel-programming" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="/education/institutes/applied-parallel-programming">TACC Summer Institute: Computational Research Techniques: Parallel Programing</a><br />
+			<a href="/education/institutes/applied-parallel-programming">TACC Summer Institute:<br />Computational Research Techniques: Parallel Programing</a><br />
 			July 29th, August 12th, August 19th</p>
 	</div>
 </div>
@@ -39,7 +39,7 @@
 		<a href="/education/institutes/machine-learning" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/machine-learning-with-intel.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="/education/institutes/machine-learning">TACC Summer Institute: Machine Learning</a><br />
+			<a href="/education/institutes/machine-learning">TACC Summer Institute:<br />Machine Learning</a><br />
 			August 2nd – 6th</p>
 	</div>
 </div>
@@ -48,7 +48,7 @@
 		<a href="/education/institutes/marine-sciences-ml-workshop" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1970021/marine-sciences-ml-workshop.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="/education/institutes/marine-sciences-ml-workshop">TACC Summer Institute: Marine Sciences Machine Learning Workshop</a><br />
+			<a href="/education/institutes/marine-sciences-ml-workshop">TACC Summer Institute:<br />Marine Sciences Machine Learning Workshop</a><br />
 			August 9th – 20th</p>
 	</div>
 </div>
