RT-19905: Update Comm Plan for STEM Connected Camp

--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -143,14 +143,14 @@
 						<li>
 							Communication plan will be available soon.</li>
 					</ul>
-					<!--<p>
+					<p>
 						<em>Y.P.P. Communication Plan:</em></p>
-					<ul class="camp-info">
+					<ul class="info-list">
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected/d34cd32b-d477-4c69-92d8-e105b6608614" target="_blank">English</a></li>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">English</a></li>
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected+-+SPANISH/e66cef38-c332-4634-a504-cdaad60cb40f" target="_blank">Español</a></li>
-					</ul>--></div>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">Español</a></li>
+					</ul></div>
 			</div>
 			<h2 class="camp-subhead">
 				Frequently Asked Questions</h2>
