Quick: Update Jobs from CMS content

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -30,9 +30,6 @@
 	Current Job Opportunities</h4>
 <!--<p><b>No open positions at this time.</b></p>-->
 <div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
-
-
-
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -40,15 +37,13 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
 			<div class="panel-body">
-				<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
-
+				<p>
+					This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
-
-
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -56,15 +51,13 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
 			<div class="panel-body">
-				<p>This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
-
+				<p>
+					This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
-
-
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -72,31 +65,27 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-for-sci" role="tabpanel">
 			<div class="panel-body">
-				<p>The Research Associate is a position in the Scalable Computational Intelligence (SCI) group at TACC. The individual will contribute to research, development, and support activities involving data mining and machine learning technologies and the interfaces by which users can transparently harness these techniques and technologies.</p>
-
+				<p>
+					The Research Associate is a position in the Scalable Computational Intelligence (SCI) group at TACC. The individual will contribute to research, development, and support activities involving data mining and machine learning technologies and the interfaces by which users can transparently harness these techniques and technologies.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/en-US/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00006550" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
-
-
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-associate-for-hpc" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-for-hpc" role="button">Research Associate (HPC)</a></h4>
+				<a aria-controls="junior-python-developer" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#junior-python-developer" role="button">Junior Python Developer</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-for-hpc" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="junior-python-developer" role="tabpanel">
 			<div class="panel-body">
-				<p>This position will work with TACC/DesignSafe users to integrate HPC technologies into their research and development activities and to measure the impact of TACC's HPC systems on their research capabilities.</p>
-
 				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00013319" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+					This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Junior-Python-Developer_R_00013654" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
-
-
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
@@ -110,8 +99,7 @@
 					<strong><a href="__REPLACE_URL__https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/…__REPLACE_URL__" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
-	</div>-->
-</div>
+	</div>--></div>
 <!-- FAQ: Internship listing currently hidden --><!--
 <h4 style="margin-top:30px;">
 	Internships</h4>
