Quick: Save staff dir from CMS
- Fix last name on dir
- Update markup whitespace
- Remove Sheryl Roehl

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -485,7 +485,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/adam-gaither">Gatiher, Adam</a></td>
+				<a href="/web/website/about/directory/adam-gaither">Gaither, Adam</a></td>
 			<td>
 				<a href="mailto:agaither@tacc.utexas.edu">agaither@tacc.utexas.edu</a></td>
 			<td>
@@ -1074,7 +1074,8 @@
 				<a href="mailto:krankin@tacc.utexas.edu">krankin@tacc.utexas.edu</a></td>
 			<td>
 				Expanding Pathways in Computing (EPIC)</td>
-		</tr>		<tr>
+		</tr>
+		<tr>
 			<td>
 				<a href="/web/website/about/directory/geoffrey-reid">Reid, Geoffrey</a></td>
 			<td>
@@ -1204,15 +1205,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/sheryl-roehl">Sheryl Roehl</a></td>
-			<td>
-				<a href="mailto:sroehl@tacc.utexas.edu">sroehl@tacc.utexas.edu</a></td>
-			<td>
-				Center Programs</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/faith-singer-villalobos">Singer-Villalobos, Faith</a></td>
+				<a href="/web/website/about/directory/faith-singer">Singer, Faith</a></td>
 			<td>
 				<a href="mailto:faith@tacc.utexas.edu">faith@tacc.utexas.edu</a></td>
 			<td>
