RT-19566, RT-19596, RT-20027: new staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -317,6 +317,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/gilbert-curbelo-iii">Curbelo, Gilbert, III</a></td>
+			<td>
+				<a href="mailto:gcurbelo@tacc.utexas.edu">gcurbelo@tacc.utexas.edu</a></td>
+			<td>
+				Education &amp; Outreach</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/anna-dabrowski">Dabrowski, Anna</a></td>
 			<td>
 				<a href="mailto:adabrowski@tacc.utexas.edu">adabrowski@tacc.utexas.edu</a></td>
@@ -498,6 +506,14 @@
 				<a href="mailto:kelly@tacc.utexas.edu">kelly@tacc.utexas.edu</a></td>
 			<td>
 				Visualization, Education &amp; Outreach</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/lauren-gant">Gant, Lauren</a></td>
+			<td>
+				<a href="mailto:lgant@tacc.utexas.edu">lgant@tacc.utexas.edu</a></td>
+			<td>
+				Education &amp; Outreach</td>
 		</tr>
 		<tr>
 			<td>
@@ -1298,6 +1314,14 @@
 				<a href="mailto:nthorne@tacc.utexas.edu">nthorne@tacc.utexas.edu</a></td>
 			<td>
 				HPC Large Scale Systems</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/shannon-thorne">Thorne, Shannon</a></td>
+			<td>
+				<a href="mailto:sthorne@tacc.utexas.edu">sthorne@tacc.utexas.edu</a></td>
+			<td>
+				Education &amp; Outreach</td>
 		</tr>
 		<tr>
 			<td>
