RT-20132: Add/Update Corral Systems Page
This commit also adds the root/systems directory.

--- a/web-content/root/systems/corral--table.html
+++ b/web-content/root/systems/corral--table.html
@@ -8,12 +8,24 @@
 			<td>
 				data.tacc.utexas.edu</td>
 		</tr>
-		<tr class="borderbottom">
+		<tr>
 			<td>
 				Total Disk</td>
 			<td>
-				15 Petabytes raw capacity at each site</td>
+				40 Petabytes raw capacity at each site</td>
 		</tr>
+		<tr class="borderbottom">
+			<td>
+				Performance</td>
+			<td>
+				100 Gigabits/second</td>
+		</tr>
+		<!--<tr class="borderbottom">
+			<td>
+				File System</td>
+			<td>
+				GPFS that supports >5 billion files</td>
+		</tr>-->
 	</tbody>
 </table>
 <p>
