--- a/web-content/root/systems/corral--body.html
+++ b/web-content/root/systems/corral--body.html
@@ -3,8 +3,8 @@
 <p>
 	<img class="img-responsive" src="/documents/1084364/1085267/corral.jpg" /></p>
 <p>
-	Corral consists of two 15-petabyte (&gt;12 petabytes usable capacity) disk arrays, installed at UT Austin and UT Arlington, along with 24 Dell servers providing high-performance storage and services for all types of digital research data. Corral provides a high performance file system accessible directly or via an iRODS data grid, MySQL and Postgres databases, and web access for data sharing. Various other services are also provided to facilitate storage and retrieval of data from sensor networks, specialized research instruments, and HPC and visualization resources.</p>
+	The primary Corral storage resource is a set of six IBM Elastic Storage System arrays, providing approximately 40 petabytes of storage and capable of supporting over 5 billion files with a Spectrum Scale/GPFS file system. This resource is connected to the TACC core network and the wider internet at a speed of 100 Gigabits/second, and is accessible from any cluster system or Virtual Machine at TACC, as well as through a variety of specialized data access services such as iRODS, S3 and HTTPS. Secondary storage for disaster-recovery purposes is provided by an IBM LTFS tape library and a smaller front-end Elastic Storage System array, located in a separate datacenter operated by TACC.</p>
 <p>
-	A high-performance parallel file system is accessible directly from TACC's world-class computational resources, <a href="/systems/stampede2">Stampede2</a> and <a href="/systems/lonestar">Lonestar</a>, and from the general TACC Data login nodes accessible at data.tacc.utexas.edu. Corral is appropriate for research data management, curation, and sharing applications.</p>
+	Corral also provides a separate, fully encrypted storage area supporting TACCs secure data storage service. This service provides encryption-at-rest, secure data deletion, refined access controls and other data protection features necessary to comply with special legislation and/or commercial access restriction.</p>
 <p>
 	In partnership with Dell and Data Direct Networks.</p>
