RT-20132: Add Row to Corral Systems Table

--- a/web-content/root/systems/corral--table.html
+++ b/web-content/root/systems/corral--table.html
@@ -14,18 +14,18 @@
 			<td>
 				40 Petabytes raw capacity at each site</td>
 		</tr>
-		<tr class="borderbottom">
+		<tr>
 			<td>
 				Performance</td>
 			<td>
 				100 Gigabits/second</td>
 		</tr>
-		<!--<tr class="borderbottom">
+		<tr class="borderbottom">
 			<td>
 				File System</td>
 			<td>
-				GPFS that supports >5 billion files</td>
-		</tr>-->
+				GPFS, support for > 5 Billion files</td>
+		</tr>
 	</tbody>
 </table>
 <p>
