--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,32 +8,11 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="/education/institutes/applied-parallel-programming" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
+		<a href="https://www.tacc.utexas.edu/taccster-2021" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/homepageNews-taccster.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="/education/institutes/applied-parallel-programming">TACC Summer Institute:<br />
-			Computational Research Techniques: Parallel Programing</a><br />
-			July 29th, August 12th, August 19th</p>
-	</div>
-</div>
-<!--<div class="row">
-	<div class="col-xs-3">
-		<a href="/education/institutes/machine-learning" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/machine-learning-with-intel.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="/education/institutes/machine-learning">TACC Summer Institute:<br />
-			Machine Learning</a><br />
-			August 2nd – 6th</p>
-	</div>
-</div>-->
-<div class="row">
-	<div class="col-xs-3">
-		<a href="/education/institutes/marine-sciences-ml-workshop" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1970021/marine-sciences-ml-workshop.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="/education/institutes/marine-sciences-ml-workshop">TACC Summer Institute:<br />
-			Marine Sciences Machine Learning Workshop</a><br />
-			August 9th – 20th</p>
+			<a href="https://www.tacc.utexas.edu/taccster-2021">TACCster 2021</a><br />
+			September 23rd - 24th</p>
 	</div>
 </div>
 <div class="row">
