sgopal-1: TACCSTER21: Fix Typos in Talks

--- a/web-content/root/taccster-2021/lightning-talks--content.html
+++ b/web-content/root/taccster-2021/lightning-talks--content.html
@@ -258,7 +258,7 @@
 							<h5 style="margin-top: 7px;">
 								ParaMonte: A High-Performance Serial/Parallel Monte Carlo and MCMC Library for Python, MATLAB, R, Fortran, C++, and C</h5>
 							<p>
-								<b>Joshua A. Osborne<sup>1</sup>*, Shashank Kumbhare<sup>1</sup>, Fatemeh Bagheri<sup>1</sup>, Parvat Sapkota<sup>1</sup> and Amir Shahmoradi1,2</b><br />
+								<b>Joshua A. Osborne<sup>1</sup>*, Shashank Kumbhare<sup>1</sup>, Fatemeh Bagheri<sup>1</sup>, Parvat Sapkota<sup>1</sup> and Amir Shahmoradi<sup>1,2</sup></b><br />
 								1. Department of Physics, College of Science, The University of Texas, Arlington<br />
 								2. Data Science Program, College of Science, The University of Texas, Arlington</p>
 						</td>
@@ -358,7 +358,7 @@
 							<h5 style="margin-top: 7px;">
 								Posterior-vertical white matter tracts cluster with ventral stream tracts in development and predict behavioral variability</h5>
 							<p>
-								<b>Vinci-Booher, S.<sup>1</sup>*, Caron, B.<sup>1</sup>, Bullock, D.<sup>1</sup>, James, K.H.1, &amp; Pestilli, F.<sup>2</sup> </b><br />
+								<b>Vinci-Booher, S.<sup>1</sup>*, Caron, B.<sup>1</sup>, Bullock, D.<sup>1</sup>, James, K.H.<sup>1</sup>, &amp; Pestilli, F.<sup>2</sup> </b><br />
 								1. Indiana University<br />
 								2. University of Texas, Austin</p>
 						</td>
